[gd_scene load_steps=9 format=3 uid="uid://bm5nb2a6vxhpe"]

[ext_resource type="Script" uid="uid://dobnd3twv2rij" path="res://scenes/entities/potion_machine.gd" id="1_524jn"]
[ext_resource type="Texture2D" uid="uid://bnxs6v3lltari" path="res://graphics/custom/PotionMachinePurple-Sheet.png" id="1_fesuh"]
[ext_resource type="FontFile" uid="uid://dkojes82n3r43" path="res://fonts/m6x11.ttf" id="3_7ahg3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5aj7t"]
radius = 129.0
height = 258.0

[sub_resource type="Animation" id="Animation_uun5d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yu5xh"]
resource_name = "purple_bubbles"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41ypu"]
_data = {
&"RESET": SubResource("Animation_uun5d"),
&"purple_bubbles": SubResource("Animation_yu5xh")
}

[sub_resource type="LabelSettings" id="LabelSettings_mjbb5"]
font = ExtResource("3_7ahg3")
font_size = 64
font_color = Color(0.66508, 0.3744, 0.78, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.556863)

[node name="PotionMachine" type="Area2D"]
collision_layer = 32
collision_mask = 18
script = ExtResource("1_524jn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(8, 8)
texture = ExtResource("1_fesuh")
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5aj7t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_41ypu")
}
autoplay = "purple_bubbles"

[node name="ShrinkInstructions" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -283.0
offset_right = 480.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
text = "[S OR DOWN ARROW NEXT TO POTION MACHINE TO SHRINK]"
label_settings = SubResource("LabelSettings_mjbb5")
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
